@@ -1,4 +1,4 @@
-/* $Id: typemap,v 1.1 1999/07/14 16:52:52 jbj Exp $ */
+/* $Id: typemap,v 1.2 1999/07/14 17:23:30 gafton Exp $ */
 
 TYPEMAP
 
